WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214449
DoesGC failures in debug mode in 32bits
https://bugs.webkit.org/show_bug.cgi?id=214449
Summary
DoesGC failures in debug mode in 32bits
Paulo Matos
Reported
2020-07-17 01:32:42 PDT
When compiling in debug mode with -O0 -g for ARMv7, and running the tests in debug mode we get lots of failures due to DoesGC issues. Example failure: stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: Error: DoesGC failed @ D@131 CheckStructure in <eval>#A8MQjF:[0x723a81c0->0x745c2f68, LLIntEval, 1276] stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: [0] frame 0x7eb341c8 { stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: name: eval code stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: sourceURL: stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: isInlinedFrame: false stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callee: 0x7459d2d8 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: returnPC: 0xc4edff stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callerFrame: 0x7eb34cb8 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: rawLocationBits: 474 0x1da stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: codeBlock: 0x723a81c0 <eval>#A8MQjF:[0x723a81c0->0x745c2f68, LLIntEval, 1276] stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: bc#474 of 1276 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: line: 30 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: column: 25 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: EntryFrame: 0x7eb34240 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: } stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: [1] frame 0x7eb34cb8 { stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: name: eval stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: sourceURL: [native code] stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: isInlinedFrame: false stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callee: 0x723ee4e0 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: returnPC: 0xc700e1 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callerFrame: 0x7eb34d28 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: rawLocationBits: 4294967291 0xfffffffb stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: codeBlock: (nil) stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: EntryFrame: 0x7eb34e00 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: } stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: [2] frame 0x7eb34d28 { stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: name: testArray stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: sourceURL: typed-array-get-by-val-profiling.js stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: isInlinedFrame: false stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callee: 0x723ee4c0 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: returnPC: 0xc6d1f3 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: callerFrame: 0x7eb34d88 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: rawLocationBits: 409 0x199 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: codeBlock: 0x723a80e0 testArray#CNWiJf:[0x723a80e0->0x723d4aa0, LLIntFunctionCall, 418] stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: bc#409 of 418 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: line: 82 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: column: 9 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: EntryFrame: 0x7eb34e00 stress/typed-array-get-by-val-profiling.js.eager-jettison-no-cjit: }
Attachments
WIP - Patch
(2.77 KB, patch)
2020-07-22 05:04 PDT
,
Caio Lima
no flags
Details
Formatted Diff
Diff
WIP - Patch
(2.23 KB, patch)
2020-07-22 05:09 PDT
,
Caio Lima
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2020-07-22 07:47 PDT
,
Caio Lima
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-07-18 11:28:17 PDT
<
rdar://problem/65771550
>
Caio Lima
Comment 2
2020-07-22 05:04:42 PDT
Created
attachment 404915
[details]
WIP - Patch Testing DoesGC into 32-bits EWS
Caio Lima
Comment 3
2020-07-22 05:09:34 PDT
Created
attachment 404916
[details]
WIP - Patch
Caio Lima
Comment 4
2020-07-22 07:47:19 PDT
Created
attachment 404923
[details]
Patch
Mark Lam
Comment 5
2020-07-27 09:25:00 PDT
Comment on
attachment 404923
[details]
Patch r=me
Caio Lima
Comment 6
2020-07-27 10:23:43 PDT
Comment on
attachment 404923
[details]
Patch Thank you very much for the review!
EWS
Comment 7
2020-07-27 10:26:15 PDT
Committed
r264929
: <
https://trac.webkit.org/changeset/264929
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404923
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug