DoesGC failures in debug mode in 32bits https://bugs.webkit.org/show_bug.cgi?id=214449

Reviewed by Mark Lam.

Adding the DoesGC update code into OSRExit::compileExit for 32-bits.

* dfg/DFGOSRExit.cpp:
(JSC::DFG::OSRExit::compileExit):


Canonical link: https://commits.webkit.org/227645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264929 268f45cc-cd09-0410-ab3c-d52691b4dbfc